# cross

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  slack-app-manifest.yaml
.github/workflows/: ci.yml  clawhub.yml
cross/: __init__.py  __main__.py  ansi.py  auto_update.py  chain.py  cli.py  config.py  conversations.py  custom_instructions.py  daemon.py  evaluator.py  event_store.py  events.py  llm.py  proxy.py  pty_helpers.py  pty_prompt.py  pty_wrapper.py  script_resolver.py  session.py  setup.py  sse.py  state.py  stream_formats.py
cross/gates/: denylist.py  llm_review.py
cross/patches/: claude_code_hook.py  codex_hook.py  openclaw_hook.mjs  permission_hook.py
cross/plugins/: dashboard.py  email.py  logger.py  notifier.py  pty_notifier.py  slack.py
cross/rules/: default.yaml
cross/sentinels/: llm_reviewer.py
evals/: gate_cases.yaml  run_gate_evals.py  run_sentinel_evals.py  sentinel_cases.yaml
skills/cross-config/: SKILL.md
tests/: test_agent_status.py  test_ansi.py  test_auto_update.py  test_chain.py  test_chain_review.py  test_claude_code_hook.py  test_cli.py  test_codex_hook.py  test_conversations.py  test_custom_instructions.py  test_daemon.py  test_dashboard.py  test_denylist.py  test_email.py  test_llm_client.py  test_llm_gate.py  test_logger.py  test_notifier.py  test_proxy.py  test_proxy_gating.py  test_pty_notifier.py  test_pty_prompt.py  test_pty_wrapper.py  test_script_execution_rule.py  test_script_resolver.py  test_sentinel.py  test_session.py  test_setup.py  test_slack.py  test_sse.py  test_sse_gating.py  test_sse_openai.py  test_sse_responses.py  test_state.py
tests/e2e/: conftest.py  mock_servers.py  test_claude_code.py  test_codex.py  test_dashboard.py  test_notifications.py  test_openclaw.py
