[project]
name = "cross"
version = "0.1.0"
description = "Agent monitoring proxy and session manager — PTY wrapping, network interception, Slack relay, and gating"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "starlette>=0.52.0",
    "uvicorn[standard]>=0.41.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = ["mitmproxy>=12.0.0"]
slack = ["slack-sdk>=3.0.0"]

[project.scripts]
cross = "cross.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
