[project]
name = "cross-ai"
version = "0.6.0"
description = "Agent monitoring proxy and session manager — PTY wrapping, network interception, Slack relay, and gating"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Cross Attention Labs" }]
keywords = ["ai", "agent", "safety", "monitoring", "proxy", "gating", "oversight"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.28.0",
    "starlette>=0.52.0",
    "uvicorn[standard]>=0.41.0",
    "pydantic-settings>=2.6.0",
    "websockets>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["mitmproxy>=12.0.0", "pytest>=8.0", "pytest-cov>=6.0", "anyio[trio]>=4.0", "pytest-anyio>=0.0.0"]
slack = ["slack-sdk>=3.0.0", "aiohttp>=3.9.0"]

[project.urls]
Homepage = "https://github.com/rfdearborn/cross"
Repository = "https://github.com/rfdearborn/cross"
Issues = "https://github.com/rfdearborn/cross/issues"

[project.scripts]
cross = "cross.cli:main"

[tool.pytest.ini_options]
addopts = "--cov=cross --cov-report=term-missing"

[tool.coverage.run]
source = ["cross"]
omit = ["cross/__main__.py"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/test_proxy.py" = ["E501"]  # SSE data lines exceed 120 chars

[tool.hatch.build.targets.wheel]
packages = ["cross"]

[tool.hatch.build]
include = ["cross/**/*.py", "cross/**/*.js", "cross/**/*.mjs", "cross/**/*.yaml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
